@@ -3,28 +3,28 @@ Hash: SHA256
 
 AUX anope.confd 319 RMD160 0c5d646bfa55a17a32b9438c79abae6fce8a3edc SHA1 e19f46901bf4c79d79c8dc55cb84973c9d136730 SHA256 c2a9351942865763e6fdeaa9c37be28efb23f788dc9041439ca80b7d60d1c4f4
 AUX anope.initd 575 RMD160 59f2759c0b3918f4d510c4f5f738dc40e079a511 SHA1 4669ee3d2eec9251b763438e0627f7152b5afc5a SHA256 bf510cb3eb2c9839630f834bc2730c6b4d3da9a7d9a671b02eefefad5f39ed1d
-AUX ldflags-fix.patch 1352 RMD160 018afc0a5841f69afd8e1d2ac0c041f97f63987a SHA1 254c53a5ac403284c98addca40d64a220f507cdb SHA256 acf219621a644ca3b0d71e6b642d515cd210c4693d602a0569835210588edb0a
+AUX ldflags-fix.patch 1382 RMD160 f861379e18ab982dec506b0b8bcd0cf2055fe7fd SHA1 0f4878628d57fe13de220697cff8a1d2047723fe SHA256 0b489d4d8977a19f199a1c2e2ad8fb8862e1d98ebacadabe2383773703bcd8fa
 AUX pid-patch.diff 450 RMD160 d18ab894895db105c91d0d1e24af2aff79f1bd13 SHA1 87be4165d15dbc6bfc972972d588e127ab492135 SHA256 cd3f266cd236e6a5bb7d15b502631e8992289455f7e308d94ac14e3b13314dc5
 DIST anope-1.8.0.tar.gz 1559446 RMD160 fc54c552de5bcfc1d3b620c442e4f5a7081734a3 SHA1 0e7106fd65c7dec4187fae26ac1ca6375fe694f1 SHA256 e0c03d2590d3da273e4fb2bb5ec8056f85045979f86e6224bfe895f16a1fd41d
 DIST anope-1.8.5.tar.gz 1611464 RMD160 4a7b21f4cae233c4630938ebda3a6f437a2fd569 SHA1 3bca790acf50ce07bd53cf57d38fc353e945152f SHA256 a0bf5fc771910b7cc923f55ffe39f0a9cf2f6973675a8f2c021cb4c4ee1fe433
 EBUILD anope-1.8.0.ebuild 4284 RMD160 b0caeea9896e3f3bbdb891e9df00874f641cba0e SHA1 b7015b938d8e5ac5e84fe888a518adfad936ef08 SHA256 497d6d53172a3dbdf313a06d70800a77522402073850b0a651af050cba56db15
 EBUILD anope-1.8.5.ebuild 4117 RMD160 422d4bfd19a4f40245f047f350bae4c57e62f28a SHA1 eee26c7a4f5073276df6ea701eeef8e85d80064c SHA256 917214be90b4e08b5fcfd63d840699fb881ad76e09028f8278d94713f5ed6c0d
-MISC ChangeLog 2712 RMD160 da7f9ac56c1e2076642467a893db7fb819f98d9f SHA1 086f370c3e2e7b476c2334b645cbb46d6084f93e SHA256 30222b769b985068d4ba0c436899d8580292a595cc22a41bdc62792b6babca2d
+MISC ChangeLog 2898 RMD160 f9adc9085ba6fb9e2676ef28e41fb6287380df51 SHA1 941f3d6a3d39dda592497b1be98bbb11702f2b4b SHA256 397d5f2880067153528293c210e9ae17e3a82b9d22cca43f4b0247fa74ee4460
 MISC metadata.xml 467 RMD160 4d1ba922dab10abae80273bc1113710cd5c03702 SHA1 789db76ef094d3a024a17274428e736e456ec598 SHA256 3264e2596d73f5b371b1442dfb31892b557ac5fb795d7712ddf2d335d94bbd3e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNLU+eAAoJEHQ6UuhrqBBQsm4QAIdNJdqHECwbXe6Gypo8Gkht
-hPH+9diJVuXeVscMO7wtAeI0qmVBR2kq8UOpfzTk2Gt0rhuMeY3ruQwq7S2sWKlA
-doBcV8FnAeaYNBQwHMpWnkf0UIRmIVDpwmI5pHgF9ynu+eVSdzv53JrQt023gvfV
-E6wlwAMi2YX8x1/lk3APDdD6cY5u97yQpvCHHN/ayMPFyUVag58U7+kzVNONzYlr
-U+NSo4qDwjIt5ic89FgaAN+WW7zFBMPccfKtSA54nBpDxSO8SWmzBZ3eM21GAufV
-Prhttlvk4Su69YrDRasWg2V67ZN7OkURineo4eeYbzDTXhycjNEuZew9brf7PsZp
-qztplez4rwdGktHHVv+fwgSRWznZ0SYkrqiJyHT8X8IlVZcSmp8wbbn9QOf3L0i2
-JEFd3Ib5NpS+cgTG/b/pXdv/ntgTqyz73J3FERlSY3FbQ4P7Qg6619d98cwYivQV
-d3Xwpa229Fzrul3AzMZQvdYwGs5yedc++5FP1HQjlkKRP1L7k8L0fcp+JQlCk7F3
-txAnagYcQaauH04yNAmB0w4Odc4eq85VlqSnUW0koFeaxGFtAdlsYmqVyaWrsHLd
-Qbp75BM5TVD87Zx0iuXVpeXvfM6mZGonlgtpSHTbnpU3s3EUXAuhFSORJx+N1O2h
-bbVEYqxeMDnsZHAcVcDe
-=Q+qV
+iQIcBAEBCAAGBQJNLVkxAAoJEHQ6UuhrqBBQOW0QAJuWfkQxNLDYnGHW4LyZ/Gri
++kHrUIZf9/1tzoM4xSkkT/1q1vNxvDhYkU0G8HeFxRBMdEKbK41PzwZtqGGBsYdP
+etgvGpybzLwNKAQzQNyk7ZirQwWLZHHntkWzI0a3mre/bFYWirde7UMBaPc/sLNK
+XOZ5Ql6YDieK/1v0+3b8hg2C73xoUiQClT5NVQYZOBVWEUCLZPF/Jks0B+wqzRPW
+n2ED0sNvubU9ztnASKv8LWdoHm9jeWIUylhBhf8SsLrGw+knrwPu70gx53eMGsAl
+JfhtkIFB7PSQh8LHJkf75mkOYX49KHQ8L/kO2HBIPKQ3FqfG624AezUVM0dI7fJB
+SyXqYSfGbVR98RXN7IKAf79lqIPLvQ7km4oh/ua/EtP6KpEncoWeBnoL7GjWKhZb
+NYJOQlqF2CTUI1hWVD1hAmyTm/iDDKp9pk8z4VvbNa74AIC4YUhWNBz8EcvGECTm
+TaQimUTQSNCUOgdJC0ARtOoQyT0D/p8P8keORIDWYHhDgl05uO719aaCXS1DyfJ6
+wtTMedrSWYzIsc3nN9bNtt4Rsz497JEY0sE56prAeoqz3Zs2r0HSOH+q4jfjCJQQ
+teP2TwyEkWhpcLNpwMpk0e4LVufpp/bTDLfRIMKodGDNJe0R2kUeJSrIlOLtKU2s
+Kt6nVL81qTcE1r3HjbZo
+=i+pE
 -----END PGP SIGNATURE-----
