@@ -3,6 +3,11 @@
 # $Header: /var/cvsroot/gentoo-x86/net-irc/anope/ChangeLog,v 1.15 2009/06/27 11:04:34 patrick Exp $
 
   12 Jan 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
+  files/ldflags-fix.patch:
+  Fix compilation error on portage-multilib with patched gcc-config, bug
+  351414.
+
+  12 Jan 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
   +anope-1.8.5.ebuild, +files/ldflags-fix.patch:
   Import anope-1.8.5 from gentoo-x86 for multilib fixing and enhancements.
 
